# lite-guardrails

./: .dockerignore  .env.example  .gitignore  404.html  Dockerfile  LICENSE  README.md  SECURITY.md  admin.py  app.py  db.py  docker-compose.yml  engine.py  index.html  main.py  mkdocs.yml  pyproject.toml  requirements.txt  ruff.toml  runlog.py  sitemap.xml
alembic/: README.md  env.py
architecture/: index.html
backend/: config.py  engine.py  logging_config.py  runlog.py  runtime_settings.py
benchmarks/: bench_nsfw.py  bench_pii.py  compute_bench.py  http_bench.py  k6_loadtest.js  loadtest.py  loadtest_mp.py  profile_hotpath.py
comparison/: index.html
deployment/: index.html
detectors/: __init__.py  base.py
docs/: architecture.md  comparison.md  deployment.md  index.md  modules.md  sdk-js.md  sdk.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
litellm_middleware/: config.example.yaml  config.test.yaml  lite_guardrails.py  requirements.txt
modules/: index.html
monitoring/: README.md
sdk/: index.html
sdk-js/: index.html
sdk/python/: README.md  pyproject.toml
sdk/python/lite_guardrails_client/: __init__.py  _transport.py  async_client.py  client.py  errors.py
sdk/python/tests/: test_async_client.py  test_client.py
search/: search_index.json
src/: engine.py  runlog.py
tests/: conftest.py  inmemory.py  test_admin_api.py  test_anonymize_deanonymize.py  test_api_auth.py  test_cors_config.py  test_engine_build.py  test_error_logging.py  test_health.py  test_log_anonymization.py  test_logging.py  test_mapping_store.py  test_metrics.py  test_nsfw.py  test_nsfw_ahocorasick.py  test_passport_validation.py  test_pii_anonymize.py  test_pii_detector.py  test_pii_patterns.py  test_rate_limit.py  test_redos_protection.py  test_relevant.py  test_relevant_golden.py  test_relevant_settings.py  test_retention.py  (+1 more)
(+178 files in other folders)
