[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "lite-guardrails-client"
version = "0.1.0"
description = "Python-клиент для сервиса lite-guardrails (PII / NSFW / relevance)"
requires-python = ">=3.9"
dependencies = ["httpx>=0.24"]

[dependency-groups]
dev = ["pytest"]

[tool.setuptools.packages.find]
include = ["lite_guardrails_client*"]
